# NN-C

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
examples/digit_recognition/: digit_recognition.py  main.c
include/: activation.h  activations.h  backprop.h  data.h  layer.h  loss.h  model.h  operations.h  optimizer.h  serialization.h  tests.h  types.h  utils.h
src/: activation.c  activations.c  backprop.c  data.c  layer.c  loss.c  model.c  operations.c  optimizer.c  serialization.c  types.c  utils.c
test/: CMakeLists.txt  test_activations.c  test_backprop.c  test_data.c  test_layer.c  test_loss.c  test_model.c  test_operations.c  test_optimizer.c  test_seralization.c  test_training_loop.c  test_types.c
